--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Hej! - WebTest1</title>
-    </head>
-    <body>
-        <header>
-            <p>testing</p>
-            <textarea id="answer" rows="2" cols="20"></textarea>
-        <!--<script src="site.js"></script>-->
-            <script>
-                var out = document.getElementById("answer");
-                out.innerHTML = "Hello JavaScript!";
-            </script>
-        </header>
-    </body>
+<head>
+    <title>Hej! - WebTest1</title>
+</head>
+<body>
+    <p id="answer">testing</p>
+    <textarea id="answer" rows="2" cols="20"> b</textarea>
+    
+    <script src=site.js></script>
+</body>
 </html>
