--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title>Hej! - WebTest1</title>
 </head>
 <body>
-    <p id="answer">testing</p>
-    <textarea id="answer" rows="2" cols="20"> b</textarea>
+    <p id="a">Skriv ditt namn!</p>
+    <input id="input" />
+    <button id="btn1">Click Me!</button><br />
+    <p id="answer"></p>
     
     <script src=site.js></script>
 </body>
