--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     <p id="a">Skriv ditt namn!</p>
-    <input id="input" />
-    <button id="btn1">Click Me!</button><br />
+    <input id="input"/>
+    <button id="btn1">Click Me!</button><br/>
     <p id="answer"></p>
-    
+    <canvas id="canvas" width="200" height="100"></canvas>
     <script src=site.js></script>
 </body>
 </html>
